Atualizando os testes dos controllers